2011-07-06  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el: Bind [C-u f3] to highlight-symbol-prev.

	* init-basic.el (hs-set-up-overlay): Use mode-line face to display hideshow-overlay.

	* init-misc.el: Disable hl-s-mode in help-mode.

2010-06-22  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: Set background color to lightcyan.

2010-06-21  Meteor Liu  <meteor1113@gmail.com>

	* init-site.el: Enable global-semantic-decoration-mode for include.

2010-06-20  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (auto-mode-alist): .mm alist to objc-mode.

	* init-toolbar.el: Remove the some buttons in the tool bar.

2010-06-19  Meteor Liu  <meteor1113@gmail.com>

	* init-toolbar.el: Add toolbar button isearch-repeat-forward.

	* init-basic.el (hs-set-up-overlay): Setting hideshow.
	Add skeleton setting.
	(window-system): Color setting.
	(lambda): Remove the print-buffer button in the tool bar.

	* init-misc.el (smart-hl): Add smart-hl for double click highlight.

2010-06-06  Meteor Liu  <meteor1113@gmail.com>

	* init-site.el: Search global for CEDET.

2010-06-05  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: Open semanticdb-enable-gnu-global-databases for
	c-mode and c++-mode.

	* init-misc.el: Add gtags and xgtags setting.
	Remove gtags.
	Search cscopt and global.

	* init-basic.el: Update semantic-ia-fast-jump-back for buildin cedet.
	: Set ede-locate-setup-options to enable global.

	* init-site.el: Update semantic-ia-fast-jump-back.
	: Enable semantic-load-enable-primary-exuberent-ctags-support.

	* init-basic.el (grep-current-dir): Update grep setting.

	* init-site.el: Add semantic-load-enable-all-exuberent-ctags-support.

2010-06-04  Meteor Liu  <meteor1113@gmail.com>

	* init-toolbar.el: Add toolbar item semantic-analyze-proto-impl-toggle.

	* init-basic.el (org-export-with-archived-trees): Org also export
	archived trees.

2010-06-03  Meteor Liu  <meteor1113@gmail.com>

	* README: Update toolbar config.
