@@ -1,7 +1,7 @@
 /* XPM */
 static char *pop-menu_xpm[] = {
 /* width height num_colors chars_per_pixel */
-"     5    18      256            2",
+"     9    18      256            2",
 /* colors */
 "`` c #ffffff",
 "`. c #999999",
@@ -260,22 +260,22 @@ static char *pop-menu_xpm[] = {
 "a7 c #000000",
 "a8 c #000000",
 /* pixels */
-"``````````",
-"``````````",
-"``````````",
-"``````````",
-"``````````",
-"``````````",
-"``````````",
-"`.`#`#`#`.",
-"```.`#`.``",
-"`````.````",
-"``````````",
-"``````````",
-"``````````",
-"``````````",
-"``````````",
-"``````````",
-"``````````",
-"``````````"
+"``````````````````",
+"``````````````````",
+"``````````````````",
+"``````````````````",
+"``````````````````",
+"``````````````````",
+"``````````````````",
+"`````.`#`#`#`.````",
+"```````.`#`.``````",
+"`````````.````````",
+"``````````````````",
+"``````````````````",
+"``````````````````",
+"``````````````````",
+"``````````````````",
+"``````````````````",
+"``````````````````",
+"``````````````````"
 };
