@@ -1,3 +1,7 @@
+2010-06-24  Meteor Liu  <meteor1113@gmail.com>
+
+	* init-toolbar.el: Add change major-mode menu.
+
 2011-07-06  Meteor Liu  <meteor1113@gmail.com>
 
 	* init-misc.el: Bind [C-u f3] to highlight-symbol-prev.
